# SlateCore

./: .gitignore  CMakeLists.txt  README.md  SConstruct  cmakelists.txt
include/: Formula.hpp  ProofGraph.hpp  SExpression.hpp  Term.hpp  settings.hpp  verify.hpp
res/: ProofGraphSchema.json  VerifyResultsSchema.json
src/: Fomula_io.cpp  Formula.cpp  Formula.hpp  Formula_methods.cpp  Formula_predicate.cpp  ProofGraph.cpp  ProofGraphSchema.cpp  SExpression.cpp  SExpression.hpp  Term.cpp  Term.hpp  verify.cpp  verify.hpp
tests/: CMakeLists.txt  FormulaSExpressionTest.cpp  FormulaTest.cpp  SExpressionTest.cpp  verifyTest.cpp
